--- a/src/components/CardMedia.astro
+++ b/src/components/CardMedia.astro
@@ -25,7 +25,7 @@ const { title, backgroundColor, media } = Astro.props
     ) : (
       <div data-persist-container="true">
         <video
-          id="videoCard"
+          id="videoId"
           loop
           muted
           autoplay
