--- a/src/components/PlayerControls.astro
+++ b/src/components/PlayerControls.astro
@@ -82,7 +82,7 @@ const { showExtraButtons } = Astro.props
   </div>
 </div>
 
-<style is:global>
+<style is:inline>
   .player-controls-container {
     position: absolute;
     bottom: 0;
