--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import data from "../data.json"
         > by Ehsan Rahimi. Check out the <a
           href="https://github.com/Charca/view-transitions-live"
           target="_blank"
-          rel="noopener">source code on Github</a
+          rel="noopener">original source code on Github</a
         >, and this
         <a
           href="https://simple-set-demos.glitch.me/video/"
@@ -54,6 +54,13 @@ import data from "../data.json"
           rel="noopener">Jake Archibald</a
         > for the smooth video transition.
       </p>
+      <a
+        href="https://github.com/jazzypants1989/view-transitions-live"
+        target="_blank"
+        rel="noopener"
+      >
+        And, here's the source code for this MPA version.
+      </a>
     </footer>
   </main>
 
