--- a/src/pages/playlist/[id].astro
+++ b/src/pages/playlist/[id].astro
@@ -31,7 +31,7 @@ const {
 
 <Layout title="View Transitions Demo - Playlist Details">
   <main
-    class="playlist-container with-transition"
+    class="playlist-container card"
     style={`
   --backgroundColor: ${backgroundColor};
   --textColor: ${textColor};
