--- a/src/components/PlaylistHeader.astro
+++ b/src/components/PlaylistHeader.astro
@@ -9,7 +9,7 @@ const { avatar, name, date } = Astro.props
 ---
 
 <header class="playlist-header">
-  <a href="/" class="back-button playlist-back-button cardLink">
+  <a href="/" class="back-button playlist-back-button">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       fill="none"
