--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,60 +1,13 @@
-.with-transition .playlist-image {
-  view-transition-name: playlist-image;
+#videoId {
+  view-transition-name: video;
 }
 
-.with-transition .playlist-title {
-  view-transition-name: playlist-title;
+.activeVT {
+  view-transition-name: card;
 }
 
-.with-transition .playlist-stats {
-  view-transition-name: playlist-stats;
-}
-
-.with-transition .playlist-description {
-  view-transition-name: playlist-description;
-}
-
-.with-transition .playlist-avatar {
-  view-transition-name: playlist-avatar;
-}
-
-.with-transition .playlist-add-button {
-  view-transition-name: playlist-add-button;
-}
-
-.with-transition .playlist-user-name {
-  view-transition-name: playlist-user-name;
-}
-
-.with-transition .playlist-user-date {
-  view-transition-name: playlist-user-date;
-}
-
-.with-transition .playlist-controls {
-  view-transition-name: playlist-controls;
-}
-
-.with-transition .playlist-overlay {
-  view-transition-name: playlist-overlay;
-}
-
-.with-transition .playlist-background {
-  view-transition-name: playlist-background;
-}
-
-.with-transition .playlist-back-button {
-  view-transition-name: playlist-back-button;
-}
-
-/**
-* Handle smooth video transition
-*/
-
-/* ::view-transition-old(playlist-image) {
-  display: none;
-} */
-
-::view-transition-new(playlist-image) {
+::view-transition-old(video),
+::view-transition-new(video) {
   animation: none;
 }
 
